--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="monospace"
             android:text="Bulls and Cows"
-            android:textSize="34sp"
+            android:textAppearance="@style/TitleTextAppearance"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
